--- a/client/css/animate.css
+++ b/client/css/animate.css
@@ -1054,6 +1054,11 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
   animation-name: fadeInDown;
 }
 
+.myown{
+    margin-top: 150px;
+    margin-bottom: 173px;
+}
+
 @-webkit-keyframes fadeInDownBig {
   0% {
     opacity: 0;
