--- a/client/css/main.css
+++ b/client/css/main.css
@@ -482,7 +482,7 @@ a:not([href]):not([tabindex]):hover {
     background: #f2f2f2;
 }
 
-#focus {
+#flywheel {
     position: relative;
     background: #f2f2f2;
 }
@@ -1547,7 +1547,12 @@ footer {
     position: relative;
     z-index: 20;
 }
-
+a {
+    color: #000;
+}
+p, a span {
+    color: #000;
+}
 .logo {
     /*margin-bottom: 30px;*/
     display: block;
