--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,600');
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Open Sans');
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans','Lato', sans-serif;
     color: #333;
     font-size: 14px;
     font-weight: 300;
