--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1435,14 +1435,39 @@ footer {
     -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
 }
-
+.outer-container {
+    border: 1px dotted black;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+.inner-container {
+    border: 1px solid black;
+    display: inline-block;
+    position: relative;
+}
+.video-overlay {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    margin: 10px;
+    padding: 5px 5px;
+    font-size: 20px;
+    font-family: Helvetica;
+    color: #FFF;
+    background-color: rgba(50, 50, 50, 0.3);
+}
+video {
+    width: 100%;
+    height: 100%;
+}
 #loader {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: #333;
+    background: #eee;
     z-index: 9999999999;
 }
 
