--- a/client/css/main.css
+++ b/client/css/main.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:100,600');
 @import url('https://fonts.googleapis.com/css?family=Open Sans');
 body {
-    font-family: 'Open Sans','Lato', sans-serif;
+    font-family: 'Open Sans', 'Lato', sans-serif;
     color: #333;
     font-size: 14px;
     font-weight: 300;
@@ -1435,17 +1435,20 @@ footer {
     -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
 }
+
 .outer-container {
     border: 1px dotted black;
     width: 100%;
     height: 100%;
     text-align: center;
 }
+
 .inner-container {
     border: 1px solid black;
     display: inline-block;
     position: relative;
 }
+
 .video-overlay {
     position: absolute;
     left: 0px;
@@ -1457,10 +1460,17 @@ footer {
     color: #FFF;
     background-color: rgba(50, 50, 50, 0.3);
 }
+
 video {
     width: 100%;
     height: 100%;
 }
+
+.center {
+    margin: 0 auto;
+    width: 400px;
+}
+
 #loader {
     position: fixed;
     top: 0;
@@ -1547,7 +1557,8 @@ video {
     background: #fff;
     color: #111;
 }
-.nab{
+
+.nab {
     font-size: 25px;
 }
 
@@ -1572,12 +1583,16 @@ video {
     position: relative;
     z-index: 20;
 }
+
 a {
     color: #000;
 }
-p, a span {
+
+p,
+a span {
     color: #000;
 }
+
 .logo {
     /*margin-bottom: 30px;*/
     display: block;
