--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300');
-@import url('https://fonts.googleapis.com/css?family=Raleway:100,600');
-@import url('https://fonts.googleapis.com/css?family=Open Sans');
+@import url('https://fonts.googleapis.com/css?family=Faster+One');
+@import url('https://fonts.googleapis.com/css?family=Vidaloka');
+@import url('https://fonts.googleapis.com/css?family=Audiowide');
+
 body {
-    font-family: 'Open Sans', 'Lato', sans-serif;
+    font-family: 'Vidaloka','Open Sans', 'Lato', sans-serif;
     color: #333;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 300;
     background: #fff;
     overflow-x: hidden;
@@ -17,7 +19,7 @@ p {
 
 a:hover,
 a:focus {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 a {
@@ -48,17 +50,26 @@ a {
 }
 
 .btn-common {
-    border: 2px solid #4676fa;
-    background-color: #4676fa;
+    border: 2px solid #151F26;
+    background-color: #151F26;
     position: relative;
     z-index: 1;
     border-radius: 4px;
 }
+.form-control:focus {
+        border-color: #D0AF51;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(208, 175, 81, 0.5);
+    }
+
+input, textarea{
+    background-color:#666;
+    color: #FFF;
+}
 
 .btn-common:hover {
-    color: #4676fa;
+    color: #0d3559;
     background-color: transparent;
-    border: 2px solid #4676fa;
+    border: 2px solid #0d3559;
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -webkit-transition: all 0.5s ease-in-out;
@@ -74,7 +85,7 @@ a {
 .btn-border:hover {
     border: 2px solid #fff;
     color: #fff;
-    background-color: #4676fa;
+    background-color: #D0AF51;
 }
 
 .btn-lg {
@@ -90,6 +101,10 @@ a {
 
 .clear {
     clear: both;
+}
+.mybut{
+    color: #D0AF51;
+    font-family: 'Faster+One';
 }
 
 h1,
@@ -124,7 +139,7 @@ a:not([href]):not([tabindex]) {
 
 a:not([href]):not([tabindex]):focus,
 a:not([href]):not([tabindex]):hover {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 .section {
@@ -148,11 +163,12 @@ a:not([href]):not([tabindex]):hover {
     font-weight: 100;
     color: #0d3559;
     position: relative;
-    padding-top: 45px;
+    font-family: 'Audiowide';
+    padding-top: 57px;
 }
 
 .section-header .section-title span {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 .section-header .section-subtitle {
@@ -166,7 +182,7 @@ a:not([href]):not([tabindex]):hover {
     margin: auto;
     width: 70px;
     position: relative;
-    border-top: 2px solid #346afe;
+    border-top: 2px solid #D0AF51;
     margin-top: 15px;
 }
 
@@ -179,7 +195,7 @@ a:not([href]):not([tabindex]):hover {
     top: -10px;
     border: 4px solid #fff;
     border-radius: 50%;
-    background: #4676fa;
+    background: #D0AF51;
     left: 27px;
 }
 
@@ -210,11 +226,11 @@ a:not([href]):not([tabindex]):hover {
 
 .menu-bg .menu-button:hover {
     cursor: pointer;
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 .menu-bg .logo-menu a {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 .menu-button:hover {
@@ -242,7 +258,7 @@ a:not([href]):not([tabindex]):hover {
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link:hover:before {
-    color: #4676fa;
+    color: #D0AF51;
     -webkit-transform: scale(1);
     transform: scale(1);
 }
@@ -252,7 +268,7 @@ a:not([href]):not([tabindex]):hover {
 .navbar-light .navbar-nav .nav-link.active:before,
 .navbar-light .navbar-nav .nav-link.open,
 .navbar-light .navbar-nav .open>.nav-link {
-    color: #4676fa;
+    color: #D0AF51;
     -webkit-transform: scale(1);
     transform: scale(1);
 }
@@ -290,7 +306,7 @@ a:not([href]):not([tabindex]):hover {
     height: 100%;
     top: 0px;
     left: 0px;
-    background: #4676fa;
+    background: #D0AF51;
     opacity: 0.7;
     filter: alpha(opacity=70);
 }
@@ -333,7 +349,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #hero-area .banner_bottom_btn i:hover {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 
@@ -419,7 +435,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #video-area .banner_bottom_btn i:hover {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 .overlay-2 {
@@ -433,7 +449,7 @@ a:not([href]):not([tabindex]):hover {
 
 #about {
     position: relative;
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 .item-boxes {
@@ -450,7 +466,7 @@ a:not([href]):not([tabindex]):hover {
     width: 60px;
     height: 60px;
     text-align: center;
-    border: 1px solid #4676fa;
+    border: 1px solid #D0AF51;
     display: inline-block;
     border-radius: 5px;
     margin-top: 10px;
@@ -463,7 +479,7 @@ a:not([href]):not([tabindex]):hover {
 .item-boxes .icon i {
     font-size: 30px;
     line-height: 60px;
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 .item-boxes h4 {
@@ -479,37 +495,37 @@ a:not([href]):not([tabindex]):hover {
 
 #services {
     position: relative;
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 #flywheel {
     position: relative;
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 #projects {
     position: relative;
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 #securityequipment {
     position: relative;
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 #EliteMilitary {
     position: relative;
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 #HardwareProducts {
     position: relative;
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 #ProductCategories {
     position: relative;
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 
@@ -556,7 +572,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #features .box-item .icon {
-    border: 1px solid #4676fa;
+    border: 1px solid #D0AF51;
     text-align: center;
     margin: 12px;
     -webkit-transition: all 0.2s linear;
@@ -566,7 +582,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #features .box-item .icon i {
-    color: #4676fa;
+    color: #D0AF51;
     font-size: 24px;
     line-height: 60px;
     -webkit-transition: all 0.2s linear;
@@ -587,7 +603,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #features .box-item:hover .icon {
-    background: #4676fa;
+    background: #D0AF51;
 }
 
 #features .box-item:hover .icon i {
@@ -608,7 +624,7 @@ a:not([href]):not([tabindex]):hover {
    ========================================================================== */
 
 #screenshots {
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 .shot-item {
@@ -697,7 +713,7 @@ a:not([href]):not([tabindex]):hover {
    ========================================================================== */
 
 #portfolios {
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 #portfolios .mix {
@@ -718,8 +734,8 @@ a:not([href]):not([tabindex]):hover {
 }
 
 .controls .mixitup-control-active {
-    color: #4676fa !important;
-    border-color: #4676fa;
+    color: #D0AF51 !important;
+    border-color: #D0AF51;
     background: transparent;
 }
 
@@ -883,8 +899,8 @@ a:not([href]):not([tabindex]):hover {
 }
 
 .video-promo .video-promo-content .video-popup:hover {
-    background: #4676fa;
-    border-color: #4676fa;
+    background: #D0AF51;
+    border-color: #D0AF51;
     color: #fff;
 }
 
@@ -894,7 +910,7 @@ a:not([href]):not([tabindex]):hover {
     height: 100%;
     top: 0px;
     left: 0px;
-    background: #4676fa;
+    background: #D0AF51;
     opacity: 0.7;
     filter: alpha(opacity=70);
 }
@@ -923,8 +939,8 @@ a:not([href]):not([tabindex]):hover {
 
 .pricing-table .icon {
     font-size: 26px;
-    color: #4676fa;
-    border: 1px solid #4676fa;
+    color: #D0AF51;
+    border: 1px solid #D0AF51;
     border-radius: 4px;
     width: 64px;
     height: 64px;
@@ -944,7 +960,7 @@ a:not([href]):not([tabindex]):hover {
     display: inline-block;
     font-size: 28px;
     font-weight: 400;
-    color: #4676fa;
+    color: #D0AF51;
     margin-bottom: 20px;
 }
 
@@ -1003,7 +1019,7 @@ a:not([href]):not([tabindex]):hover {
    ========================================================================== */
 
 #testimonial {
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 .testimonial-item {
@@ -1038,7 +1054,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 .owl-theme .owl-controls .owl-page span {
-    background: #4676fa;
+    background: #D0AF51;
 }
 
 .owl-theme .owl-controls {
@@ -1051,7 +1067,7 @@ a:not([href]):not([tabindex]):hover {
    ========================================================================== */
 
 #download {
-    background-image: linear-gradient(120deg, #89f7fe 0%, #4676fa 100%);
+    background-image: linear-gradient(120deg, #89f7fe 0%, #D0AF51 100%);
     width: 100%;
 }
 
@@ -1139,7 +1155,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #blog .blog-item-text .meta-tags span a:hover {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 #blog .blog-item-text h3 {
@@ -1154,7 +1170,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #blog .blog-item-text h3 a:hover {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 #blog .blog-item-text p {
@@ -1171,13 +1187,12 @@ a:not([href]):not([tabindex]):hover {
     width: 100%;
     margin-bottom: 20px;
     padding: 18px;
-    color: #fff;
     font-size: 14px;
     border-radius: 4px;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
-    font-family: 'Lato', sans-serif;
+    font-family: 'Vidaloka', sans-serif;
 }
 
 .form-control:focus {
@@ -1191,7 +1206,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #contact {
-    background: #f2f2f2;
+    background: #fafaee;
 }
 
 #contact .contact-block {
@@ -1230,7 +1245,7 @@ a:not([href]):not([tabindex]):hover {
 }
 
 #subscribe form input:focus {
-    border: 1px solid #4676fa;
+    border: 1px solid #D0AF51;
 }
 
 #subscribe .sub_btn {
@@ -1247,7 +1262,7 @@ a:not([href]):not([tabindex]):hover {
     color: #fff;
     top: 0;
     height: 50px;
-    background: #4676fa;
+    background: #D0AF51;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
     transition: all 0.3s;
@@ -1276,7 +1291,7 @@ footer {
 }
 
 .site-info p a:hover {
-    color: #4676fa;
+    color: #D0AF51;
 }
 
 .social-icons {
@@ -1397,7 +1412,7 @@ footer {
     text-decoration: none;
     color: #fff;
     font-size: 12px;
-    background: #4676fa;
+    background: #D0AF51;
     text-transform: uppercase;
     border: none;
     padding: 7px 16px;
@@ -1429,7 +1444,7 @@ footer {
     font-size: 14px;
     text-align: center;
     border-radius: 4px;
-    background-color: #4676fa;
+    background-color: #D0AF51;
     -webkit-transition: all 0.2s linear;
     -moz-transition: all 0.2s linear;
     -o-transition: all 0.2s linear;
@@ -1477,7 +1492,7 @@ video {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #eee;
+    background: #fff;
     z-index: 9999999999;
 }
 
@@ -1494,7 +1509,7 @@ video {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #4676fa;
+    background-color: #D0AF51;
     opacity: 0.6;
     position: absolute;
     top: 0;
